# IVANNA-OMEGA-SUPREME-v2.0

./: .gitignore  ANTI_DOLBY_INTEGRATION_GUIDE.md  ANTI_DOLBY_REPAIR_PHASE_1.md  ANTI_DOLBY_REPAIR_SUMMARY.md  ARCHITECTURE_INTEGRATION.md  BENCHMARKS.md  CHANGELOG.md  DETAILED_CODE_CHANGES.md  FIXES_CONECTIVIDAD.md  INTEGRATION_COMPLETE.md  LICENSE  NEXT_STEPS.md  PR_DESCRIPTION.md  README.md  gradle.properties  settings.gradle.kts  update.json
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: README_MODEL.txt  YAMNET_README.md  thermal_sched.bpf
app/src/main/cpp/: CMakeLists.txt  anti_dolby.cpp  anti_dolby.h  audio_control_plane.cpp  audio_control_plane.hpp  audio_orchestrator.cpp  benchmark_logger.cpp  control_frame.hpp  evolutionary_adapter.hpp  evolutionary_adapter_enhanced.hpp  evolutionary_kernel.cpp  omega_daemon.cpp  omega_effect.cpp  pd_engine.hpp  phase_oracle.cpp  phase_oracle_bridge.hpp  phase_oracle_engine.hpp  phase_oracle_refinements.hpp  pi_lstm_bridge_jni.cpp  shm_hyperplane.cpp  system_audio_capture.cpp  usb_audio_pro_manager.cpp
app/src/main/cpp/dsp/: Compressor.cpp  GainStage.cpp  HarmonicExciter.cpp  ParametricEQ.cpp  StereoWidener.cpp
app/src/main/cpp/hexagon/: ivanna_dsp.h  ivanna_dsp_impl.cpp  ivanna_fastrpc_client.hpp
app/src/main/cpp/include/: Compressor.h  GainStage.h  HarmonicExciter.h  ParametricEQ.h  StereoWidener.h  anti_dolby.h  audio_effect_compat.h  audio_thread_priority.h  dsp_types.h  hrtf_lut.h  ivanna_npe_license.h  omega_shared.h  volterra_h2_symmetric.hpp
app/src/main/cpp/jni/: ivanna_jni_stub.cpp  ivanna_npe_jni.cpp  ivanna_omega_jni.cpp  ivanna_visualizer_jni.cpp  omega_vibratory_stub.cpp
app/src/main/cpp/neuromorphic/: acoustic_synthesis_core.hpp  autonomous_brain.hpp  biquad_envelope_bank.hpp  fir_upsampler_engine.hpp  ivanna_npe_engine.cpp  ivanna_synthesizer.hpp  lif_neuron_pool.hpp  neuro_cochlear_manifold.cpp  neuro_cochlear_manifold.hpp  nho_engine.hpp  pi_lstm_milenio.hpp  synthesizer.hpp  volterra_h2_symmetric.cpp  volterra_h2_symmetric.hpp
app/src/main/cpp/spatial/: cue_based_spatial.hpp  fft_radix2.hpp  hrtf_convolver.hpp  room_model.cpp  room_model.h  spatial_engine.cpp  spatial_engine.h  spatial_jni.cpp  synthetic_hrtf.hpp
app/src/main/cpp/tests/: CMakeLists.txt  README.md  dsp_core_stability.cpp  gammatone_numerical_stability.cpp  no_denormals_low_level.cpp
app/src/main/cpp/visualizer/: gammatone_filterbank13.hpp  gl_uniform_bridge.hpp
app/src/main/java/com/ivanna/omega/: MainActivity.kt
app/src/main/java/com/ivanna/omega/ai/: AIInferenceEngine.kt  AdaptiveLearning.kt  ModelManager.kt  SpectralClassifier.kt  YamnetClassifier.kt
app/src/main/java/com/ivanna/omega/audio/: AntiDolbyController.kt  AudioCallbackManager.kt  AudioEngine.kt  AudioForegroundService.kt  AudioPipeline.kt  AudioResampler.kt  AudioRoutingManager.kt  AudioSessionReceiver.kt  IvannaConstants.kt  IvannaEngineEndpoint.kt  IvannaGlobalEffectManager.kt  NoRootAudioProcessor.kt  OmegaMetrics.kt  OmegaParameters.kt  OmegaVibratoryProcessor.kt  PlaybackCaptureService.kt  SpatialAudioEngineV2.kt  SystemAudioCapture.kt  UsbAudioProManager.kt
app/src/main/java/com/ivanna/omega/core/: AntiDolbyPreset.kt  BuildFlags.kt  IVANNAApplication.kt  IvannaNativeLib.kt  OmegaApplication.kt  OmegaEngine.kt  ParameterStore.kt  PresetManager.kt
app/src/main/java/com/ivanna/omega/dsp/: DSPBridge.kt  DSPState.kt  DSPViewModel.kt
app/src/main/java/com/ivanna/omega/magisk/: MagiskBridge.kt  OmegaDaemon.kt  OmegaEngineBridge.kt  ShmManager.kt
app/src/main/java/com/ivanna/omega/neuromorphic/: IvannaDspManager.kt  IvannaNpeEngine.kt  IvannaNpeNative.kt  PiLstmBridge.kt
app/src/main/java/com/ivanna/omega/security/: TokenManager.kt
app/src/main/java/com/ivanna/omega/ui/theme/: Theme.kt
app/src/main/java/com/ivanna/omega/visualizer/: IvannaVisualizerBridge.kt  IvannaVisualizerNative.kt  VisualizerRenderer.kt  VisualizerSurface.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
magisk_module/: customize.sh  module.prop  post-fs-data.sh  service.sh  uninstall.sh
sepolicy/: sepolicy.rule
tools/: benchmark_suite.cpp
